--- a/Chandan_Chavan_ios_Assignment/View/Base.lproj/Main.storyboard
+++ b/Chandan_Chavan_ios_Assignment/View/Base.lproj/Main.storyboard
@@ -173,7 +173,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="r2z-lD-n1N" customClass="MenuTabsView" customModule="PageViewControllerWithTabs" customModuleProvider="target">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="r2z-lD-n1N" customClass="MenuTabsView" customModule="Chandan_Chavan_ios_Assignment" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="20" width="375" height="50"/>
                                 <color key="backgroundColor" red="0.38715581945753424" green="0.30466276569178091" blue="0.45437384306712336" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
@@ -1260,7 +1260,7 @@
         <!--Page ControllerVC-->
         <scene sceneID="OlZ-ix-7OE">
             <objects>
-                <pageViewController storyboardIdentifier="PageControllerVC" autoresizesArchivedViewToFullSize="NO" transitionStyle="scroll" navigationOrientation="horizontal" spineLocation="none" id="8qx-Ov-ILm" customClass="PageControllerVC" customModule="PageViewControllerWithTabs" customModuleProvider="target" sceneMemberID="viewController"/>
+                <pageViewController storyboardIdentifier="PageControllerVC" autoresizesArchivedViewToFullSize="NO" transitionStyle="scroll" navigationOrientation="horizontal" spineLocation="none" id="8qx-Ov-ILm" customClass="PageControllerVC" customModule="Chandan_Chavan_ios_Assignment" customModuleProvider="target" sceneMemberID="viewController"/>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="HXQ-XX-O90" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-481" y="785"/>
@@ -1268,20 +1268,11 @@
         <!--ContentVC-->
         <scene sceneID="P4h-lt-yQF">
             <objects>
-                <viewController storyboardIdentifier="ContentVC" id="ORg-oT-eG4" customClass="ContentVC" customModule="PageViewControllerWithTabs" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="ContentVC" id="ORg-oT-eG4" customClass="ContentVC" customModule="Chandan_Chavan_ios_Assignment" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="QpC-nH-xg5">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xU1-dX-oDg">
-                                <rect key="frame" x="5" y="320" width="365" height="35"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="35" id="KTP-bg-btZ"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="k4P-ol-uux">
                                 <rect key="frame" x="0.0" y="20" width="375" height="647"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -1336,25 +1327,22 @@
                                     </tableViewCell>
                                 </prototypes>
                                 <connections>
-                                    <outlet property="dataSource" destination="upu-if-wZJ" id="CSf-oL-S5u"/>
-                                    <outlet property="delegate" destination="upu-if-wZJ" id="L56-bH-NiR"/>
+                                    <outlet property="dataSource" destination="ORg-oT-eG4" id="1aa-Ew-OmL"/>
+                                    <outlet property="delegate" destination="ORg-oT-eG4" id="NZC-zE-FAW"/>
                                 </connections>
                             </tableView>
                         </subviews>
                         <color key="backgroundColor" red="0.15294117647058825" green="0.090196078431372548" blue="0.14509803921568626" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
-                            <constraint firstItem="MZc-2h-biF" firstAttribute="trailing" secondItem="xU1-dX-oDg" secondAttribute="trailing" constant="5" id="2dU-VA-U1g"/>
                             <constraint firstItem="k4P-ol-uux" firstAttribute="trailing" secondItem="MZc-2h-biF" secondAttribute="trailing" id="6wc-aI-9dp"/>
                             <constraint firstItem="k4P-ol-uux" firstAttribute="top" secondItem="MZc-2h-biF" secondAttribute="top" id="JeH-gf-ppd"/>
-                            <constraint firstItem="xU1-dX-oDg" firstAttribute="top" secondItem="MZc-2h-biF" secondAttribute="top" constant="300" id="LEX-f3-uIy"/>
                             <constraint firstItem="k4P-ol-uux" firstAttribute="leading" secondItem="MZc-2h-biF" secondAttribute="leading" id="OdC-cK-n30"/>
-                            <constraint firstItem="xU1-dX-oDg" firstAttribute="leading" secondItem="MZc-2h-biF" secondAttribute="leading" constant="5" id="iW1-6B-JYu"/>
                             <constraint firstItem="MZc-2h-biF" firstAttribute="bottom" secondItem="k4P-ol-uux" secondAttribute="bottom" id="k52-GG-5ne"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="MZc-2h-biF"/>
                     </view>
                     <connections>
-                        <outlet property="nameLabel" destination="xU1-dX-oDg" id="n8g-Zd-V5t"/>
+                        <outlet property="tableView" destination="k4P-ol-uux" id="qZW-wq-Bxb"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="lj5-JX-pzJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
